# genanki-rs

./: .gitignore  .gitmodules  Makefile  README.md
core/: .gitignore  Cargo.toml  pyproject.toml
core/src/: config.rs  data.rs  generator.rs  git.rs  init.rs  lib.rs  main.rs  markdown.rs  test.rs  updater.rs
core/src/tests/: mod.rs  test_generator.rs  test_subdeck.rs  test_updater.rs
core/tests/: test.md
core/tests/test/a/: a.md
core/tests/test/a/b/: b.md
core/tests/test/a/b/c/: c.md
plugin/: __init__.py
src/: __init__.py  gencore  manifest.json
src/user_files/: config.toml
