[package]
name = "gencore"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lib]
name = "gencore"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module", "anyhow"] }
html-escape = "0.2.13" # Add a dep to correct a dep, we live in a beautiful world
markdown = {git = "https://github.com/Rheydskey/markdown-rs"}
gitpatch = "0.7.1"
argh = "0.1.13"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
blake3 = "1.8.2"
anyhow = "1"
