[package]
name = "gencore"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lib]
name = "gencore"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module", "anyhow"] }
html-escape = "0.2" # Add a dep to correct a dep, we live in a beautiful world
markdown = {git = "https://github.com/Rheydskey/markdown-rs"}
gitpatch = "0.7"
blake3 = "1.8"
serde = { version = "1.0", features=["derive"]}
toml = "0.9.7"
sha256 = "1.6.0"
anyhow = "1"
