[package]
name = "gencore"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lib]
name = "gencore"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module", "anyhow"] }
comrak = { version = "0.48.0", optional=false}
gitpatch = "0.7"
blake3 = "1.8"
serde = { version = "1.0", features=["derive"]}
toml = "0.9.7"
sha256 = "1.6.0"
anyhow = "1"
base64 = "0.22.1"
infer = "0.19.0"
percent-encoding = "2.3.2"

[dev-dependencies]
rstest = "0.26.1"
